[gd_scene load_steps=16 format=3 uid="uid://io5wda562yoa"]

[ext_resource type="PackedScene" uid="uid://rs65ur780i7r" path="res://Scenes/MasterTank.tscn" id="1_tcv3e"]
[ext_resource type="Script" path="res://Scripts/MenuTank.gd" id="2_6u4sk"]
[ext_resource type="Texture2D" uid="uid://b6g3mspsj6xte" path="res://Graphics/models/T_Blue_Wide.png" id="3_nrrik"]
[ext_resource type="Texture2D" uid="uid://14cv0r3rvlje" path="res://Graphics/models/TankParts.png" id="3_tavsk"]
[ext_resource type="Texture2D" uid="uid://bys4mhf5mip7n" path="res://Graphics/models/T_Gold_Wide.png" id="4_mcb8l"]
[ext_resource type="Texture2D" uid="uid://d25kroamvhqcn" path="res://Graphics/models/T_Green_Wide.png" id="5_tjr8j"]
[ext_resource type="Texture2D" uid="uid://b4tpdx52um5ec" path="res://Graphics/models/T_Grey_Wide.png" id="6_cwpvu"]
[ext_resource type="Texture2D" uid="uid://bi5qj4kuyq4x1" path="res://Graphics/models/T_Purple_Wide.png" id="7_8f7gr"]
[ext_resource type="Texture2D" uid="uid://ccvfh3ekjxt1" path="res://Graphics/models/T_Red_Wide.png" id="8_m2if8"]
[ext_resource type="Texture2D" uid="uid://crkhqt4vrw5l6" path="res://Graphics/models/T_Teal_Wide.png" id="9_la8to"]
[ext_resource type="Texture2D" uid="uid://l6fuke78nwok" path="res://Graphics/models/T_Yellow_Wide.png" id="10_5p5ur"]
[ext_resource type="Shader" path="res://Shader/HueCircling.gdshader" id="11_2g70f"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yumlp"]
resource_local_to_scene = true
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.1
color = Color(1, 1, 1, 0.556863)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fa5hu"]
resource_local_to_scene = true
shader = ExtResource("11_2g70f")
shader_parameter/Shift_Hue = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxigo"]
size = Vector2(401, 320)

[node name="MenuTank" instance=ExtResource("1_tcv3e")]
position = Vector2(238, 181)
scale = Vector2(1, 1)
script = ExtResource("2_6u4sk")
tankTexture = Array[Texture]([ExtResource("3_nrrik"), ExtResource("4_mcb8l"), ExtResource("5_tjr8j"), ExtResource("6_cwpvu"), ExtResource("7_8f7gr"), ExtResource("8_m2if8"), ExtResource("9_la8to"), ExtResource("10_5p5ur")])
moveSpeed = 0.0
rotationSpeed = 0.0
shotDelay = 0.0
startHealth = 0
dashDelay = 0.0
metadata/_edit_group_ = true

[node name="TankTracks" parent="." index="0"]
process_material = SubResource("ParticleProcessMaterial_yumlp")

[node name="Body" parent="." index="1"]
material = SubResource("ShaderMaterial_fa5hu")
region_rect = Rect2(1031, 0, 476, 361)

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(-37, 0)
shape = SubResource("RectangleShape2D_pxigo")

[node name="Canon" parent="." index="3"]
visible = false
texture = ExtResource("3_tavsk")
centered = false
offset = Vector2(-15, -39)
region_enabled = true
region_rect = Rect2(56, 801, 288, 80)

[node name="BulletSpawnPoint" parent="Canon" index="0"]
position = Vector2(273, 0)

[node name="MenuDeathTimer" type="Timer" parent="." index="15"]
wait_time = 15.0
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="16"]
position = Vector2(-109, -1.00001)
scale = Vector2(10.6, 16)

[connection signal="timeout" from="MenuDeathTimer" to="." method="_on_menu_death_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
